<resources>
    <string name="app_name">ExploRo</string>
    <!-- Strings related to log in -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_email">Enter your email to reset your password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>

    <!-- Strings related to sign up -->
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_an_account">Create Account</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="invalid_password">
        Password must have at least 8 characters, contain at least one uppercase character, one lowercase character and
        one number!
    </string>
    <string name="passwords_do_not_match">Passwords do not match!</string>

    <!-- Strings related to main activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_account">Your account</string>

    <!-- Strings related to home fragment -->
    <string name="show_trip">Show trip</string>
    <string name="delete_trip">Delete trip</string>
    <string name="confirm_delete_trip">Are you sure you want to delete this trip?</string>

    <!-- Strings related to account fragment -->
    <string name="logout">Logout</string>
    <string name="user_settings">User settings</string>
    <string name="change_currency">Change currency</string>
    <string name="ron_currency">RON</string>
    <string name="usd_currency">USD</string>
    <string name="eur_currency">EUR</string>
    <string name="change_distance">Change distance unit</string>
    <string name="kilometers">kilometers (km)</string>
    <string name="miles">miles (mi)</string>
    <string name="reset_password">Reset password</string>
    <string name="edit_display_name">Edit display name</string>
    <string name="change_display_name">Change your display name</string>
    <string name="confirm_name">Confirm</string>
    <string name="delete_account">Delete account</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="confirm_delete">Yes, confirm</string>
    <string name="no_delete_account">No</string>

    <!-- Strings related to explore fragment -->
    <string name="your_destination">What\'s your destination?</string>
    <string name="select_destination">Select a city to visit and generate a new trip plan.</string>

    <!-- Strings related to planning activity -->
    <string name="title_activity_planning">PlanningActivity</string>
    <string name="title_planning">Plan your trip</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="dates">Dates</string>
    <string name="when_is_trip">When are you going on your trip?</string>
    <string name="details">Details</string>
    <string name="select_places_to_visit">Select places to visit:</string>
    <string name="placeholder_attraction_name">Attraction name</string>
    <string name="placeholder_attraction_description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper vulputate mollis. Nam maximus aliquam.
    </string>
    <string name="placeholder_attraction_address">Address:</string>
    <string name="placeholder_attraction_website">Link</string>
    <string name="entrance_fees">Entrance fees:</string>
    <string name="adult_price">Adults:</string>
    <string name="student_price">Children/students:</string>
    <string name="opening_hours">Opening hours:</string>
    <string name="attraction_hours">Monday – Sunday:</string>
    <string name="average_time_spent">Average time spent:</string>
    <string name="continue_button">Continue to your trip!</string>
    <string name="close_button">Close</string>

    <!-- Strings related to trip activity -->
    <string name="title_activity_trip_planner">TripPlannerActivity</string>
    <string name="title_trip">Your trip plan</string>
    <string name="who_is_traveling">Who is traveling?</string>
    <string name="num_of_adults">Adults</string>
    <string name="num_of_students">Children/Students</string>
    <string name="total_price">Total price:</string>
    <string name="save_plan">Save plan</string>

</resources>