<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/attraction_name"
            android:text="@string/placeholder_attraction_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"/>

    <TextView
            android:id="@+id/attraction_description"
            android:text="@string/placeholder_attraction_description"
            android:fontFamily="@font/poppins_light"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"/>

    <TextView
            android:id="@+id/attraction_time"
            android:text="@string/average_time_spent"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"/>

    <TextView
            android:id="@+id/attraction_price"
            android:text="@string/entrance_fees"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"/>

    <TextView
            android:id="@+id/prices"
            android:text="@string/price_placeholder"
            android:fontFamily="@font/poppins_light"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"/>

    <TextView
            android:id="@+id/attraction_hours"
            android:text="@string/attraction_hours"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"/>

    <TextView
            android:id="@+id/opening_hours"
            android:text="@string/hours_placeholder"
            android:fontFamily="@font/poppins_light"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"/>

    <TextView
            android:id="@+id/attraction_address"
            android:text="@string/placeholder_attraction_address"
            android:fontFamily="@font/poppins_light"
            android:textStyle="italic"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"/>

    <Button
            android:id="@+id/close_button"
            android:text="@string/close_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginVertical="15dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/yellow_200"
            android:textColor="@color/black"/>

</LinearLayout>