<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group"
            android:layout_width="260dp"
            android:layout_height="220dp"
            android:orientation="vertical">

    <TextView
            android:id="@+id/change_currency"
            android:text="@string/change_currency"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="13dp"
            android:layout_marginHorizontal="30dp"/>
    <RadioButton
            android:id="@+id/radio_option1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:text="@string/ron_currency"
            android:layout_marginHorizontal="30dp"/>
    <RadioButton
            android:id="@+id/radio_option2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:text="@string/eur_currency"
            android:layout_marginHorizontal="30dp"/>

    <RadioButton
            android:id="@+id/radio_option3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/usd_currency"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="13dp"/>
</RadioGroup>