<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RadioButton
                android:id="@+id/radio_option1"
                android:textSize="20sp"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:text="@string/ron_currency"/>

        <RadioButton
                android:id="@+id/radio_option2"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eur_currency"/>

        <RadioButton
                android:id="@+id/radio_option3"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usd_currency"/>
</RadioGroup>