<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group"
            android:layout_width="260dp"
            android:layout_height="220dp"
            android:orientation="vertical">

    <TextView
            android:id="@+id/change_distance"
            android:text="@string/change_distance"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:layout_marginHorizontal="30dp"/>
    <RadioButton
            android:id="@+id/radio_option1"
            android:textSize="19sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/kilometers"
            android:layout_marginHorizontal="30dp"/>
    <RadioButton
            android:id="@+id/radio_option2"
            android:textSize="19sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/miles"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="13dp"/>

</RadioGroup>