<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="370dp"
        android:layout_height="260dp"
        android:orientation="vertical">

    <TextView
            android:id="@+id/confirm_delete_account"
            android:text="@string/confirm_delete_account"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="31dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"/>
    <Button
            android:id="@+id/yes_button"
            android:layout_width="178dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="96dp"
            android:layout_marginStart="96dp"
            android:text="@string/confirm_delete"
            android:textSize="20sp"
            android:backgroundTint="@color/red_200"
            android:textColor="@color/black"/>
    <Button
            android:id="@+id/no_button"
            android:layout_width="134dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="118dp"
            android:layout_marginStart="118dp"
            android:text="@string/no_delete_account"
            android:textSize="20sp"
            android:backgroundTint="@color/yellow_200"
            android:textColor="@color/black"/>

</LinearLayout>