<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/enter_email"
            android:text="@string/enter_email"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="31dp"
            android:gravity="center_horizontal"/>
    <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="20sp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"/>
    <Button
            android:id="@+id/reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="77dp"
            android:text="@string/reset_password"
            android:backgroundTint="@color/yellow_200"
            android:textColor="@color/black"/>
</LinearLayout>