<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.example.exploro.signup.SignupActivity"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".signup.SignupActivity">

        <TextView
                android:text="@string/create_an_account"
                android:layout_width="349dp"
                android:layout_height="53dp"
                android:id="@+id/textView"
                android:textSize="37sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="96dp"
                app:layout_constraintHorizontal_bias="0.065"/>

        <EditText
                android:id="@+id/fullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:inputType="textPersonName"
                android:autofillHints="@string/full_name"
                android:hint="@string/full_name"
                android:ems="10"
                android:selectAllOnFocus="true"
                android:fontFamily="@font/poppins_light"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:fontFamily="@font/poppins_light"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullName"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:fontFamily="@font/poppins_light"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"/>

        <EditText
                android:id="@+id/password2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/confirm_password"
                android:hint="@string/confirm_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:fontFamily="@font/poppins_light"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"/>

        <Button
                android:id="@+id/signup"
                android:enabled="true"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="64dp"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:backgroundTint="@color/yellow_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password2"
                app:layout_constraintVertical_bias="0.098"
                app:layout_constraintHorizontal_bias="0.5"/>

        <ProgressBar
                android:id="@+id/loading"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"/>

        <TextView
                android:text="@string/already_have_an_account"
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:id="@+id/textView2"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup"
                app:layout_constraintHorizontal_bias="1.065"/>

        <Button
                android:id="@+id/login"
                android:enabled="true"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="64dp"
                android:text="@string/action_sign_in"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/red_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.074"
                app:layout_constraintHorizontal_bias="0.065"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>