<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.AccountFragment">

    <ProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>

    <TextView
            android:id="@+id/text_account"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:textSize="27sp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/logout"
            android:enabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:backgroundTint="@color/yellow_200"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/text_account"
            app:layout_constraintTop_toBottomOf="@+id/text_account"/>
    <View
            android:id="@+id/divider1"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout"/>
    <TextView
            android:id="@+id/user_settings"
            android:text="@string/user_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="23sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/text_account"
            app:layout_constraintTop_toTopOf="@+id/divider1" />
    <TextView
            android:id="@+id/reset_password"
            android:text="@string/reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="@+id/text_account"
            app:layout_constraintTop_toBottomOf="@+id/user_settings"/>
    <TextView
            android:id="@+id/edit_name"
            android:text="@string/edit_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="@+id/text_account"
            app:layout_constraintTop_toBottomOf="@+id/reset_password"/>
    <TextView
            android:id="@+id/delete_account"
            android:text="@string/delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/red_500"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="@+id/text_account"
            app:layout_constraintTop_toBottomOf="@+id/edit_name"/>

    <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>